# curl_raii

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  curl_raii.cpp
examples/: CMakeLists.txt  download_file.cpp  http_get.cpp
include/curl_raii/: curl_easy_session.hpp  curl_easy_session.inl  curl_raii.hpp  curl_raii.inl  curl_raii_adapter.hpp  curl_raii_adapter_impl.hpp  curl_raii_adapter_impl.inl  policy.hpp  utils.hpp  utils.inl
src/: curl_raii.cpp
tests/: CMakeLists.txt
tests/unit/: curl_easy_test.cpp  curl_raii_test.cpp
